--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -17,6 +17,7 @@ env:
     ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
     ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
     ARM_USE_OIDC: true
+    TF_VAR_APP_KEY: ${{ secrets.TF_VAR_APP_KEY }}
 
 jobs:
     deploy-shared:
