--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -18,6 +18,7 @@ env:
     ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
     ARM_USE_OIDC: true
     TF_VAR_APP_KEY: ${{ secrets.TF_VAR_APP_KEY }}
+    SSH_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
 
 jobs:
     deploy-shared:
