--- a/terragrunt/modules/azure-iaas-app-service/cloud-init-docker.yaml
+++ b/terragrunt/modules/azure-iaas-app-service/cloud-init-docker.yaml
@@ -104,8 +104,26 @@ write_files:
 
 runcmd:
     # Install Docker packages
-    # - apt-get update
-    - apt-get install -y docker.io docker-compose-plugin curl
+    - sudo apt-get update
+    - sudo apt-get install -y ca-certificates curl
+    - sudo install -m 0755 -d /etc/apt/keyrings
+    - sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+    - sudo chmod a+r /etc/apt/keyrings/docker.asc
+
+    # Add the repository to Apt sources:
+    - echo \
+      "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
+      $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
+      sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+
+    # 3. Install Docker Engine and Compose Plugin
+    - sudo apt-get update
+    - sudo apt-get install -y docker.io docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+
+    # 4. (Optional) Allow running docker without sudo
+    # This adds your current user 'azureuser' (or similar) to the docker group
+    - sudo usermod -aG docker $USER
+    - newgrp docker
 
     # Create app directory
     - mkdir -p /opt/app
