--- a/.github/workflows/app-deploy.yml
+++ b/.github/workflows/app-deploy.yml
@@ -62,9 +62,21 @@ jobs:
       - name: Get infrastructure outputs
         id: infra
         working-directory: terragrunt/iaas/${{ env.ENV_NAME }}
+        env:
+          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          ARM_USE_OIDC: true
         run: |
+          echo "Initializing Terragrunt for ${{ env.ENV_NAME }}..."
+          terragrunt init -reconfigure
           VM_IP=$(terragrunt output -raw vm_public_ip)
-          ACR_NAME=$(cd ../../shared && terragrunt output -raw acr_name)
+          
+          echo "Getting ACR name from shared..."
+          cd ../../shared
+          terragrunt init -reconfigure
+          ACR_NAME=$(terragrunt output -raw acr_name)
+          
           echo "vm_ip=$VM_IP" >> $GITHUB_OUTPUT
           echo "acr_name=$ACR_NAME" >> $GITHUB_OUTPUT
 
